crates/keron-lang/tests/corpus/errors/check/fn_missing_required_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: missing required argument `b` for `add`
  --> 2:14
  |
2 | val x: Int = add(1)
  |              ^^^^^^^
